--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,99 @@
 
+2017-07-24  Charles Childers  <crc@forthworks.com>
+
+	* tanu is now a filter; closes #12
+	* more readability improvements to the Makefile generator
+	* use the new build tool to generate a Makefile for the interfaces, extend, and embedimage
+
+2017-07-22  Charles Childers  <crc@forthworks.com>
+
+	* remove unused file
+	* remove unused file
+	* build.forth: cleaner Makefile output
+	* fix listener script
+	* new build tool now capable of outputting a valid Makefile
+	* more work on new build tool: scan dependencies
+	* build.forth: take argument from command line
+	* build tool: inching closer
+	* more work on build.forth
+	* new example
+
+2017-07-21  Charles Childers  <crc@forthworks.com>
+
+	* start work on something like build.c, but in forth
+	* begin early work to use new build tool for compiling sources
+	* bring in new build tool (intended to help work on issue #13)
+	* move documentation into doc dir
+	* floating point now an io module
+	* close block for floating point code
+	* add a .gitattributes
+	* seriously raise memory limits: 1M return stack; 4K stack depth; 48M heap
+	* split rre.forth better
+	* begin work to support embedding source files into rre, other interfaces
+
+2017-07-20  Charles Childers  <crc@forthworks.com>
+
+	* minor update to Primes example; now supports much bigger sets
+	* add some more tests
+	* Fix example. Closes issue #11
+	* begin work on fixing argument handler. see issue #11
+	* add a couple more tests
+
+2017-07-19  Charles Childers  <crc@forthworks.com>
+
+	* a few more tests
+	* example: using VT100/ANSI escape sequences
+	* fix issue w/documentation for s:with-format
+	* use .forth suffix for examples, not .md
+	* add note on the fenced syntax to Interfaces.md
+	* new example: simple implementation of "echo"
+	* add support for ~~~ code blocks as well. closes #10
+	* begin work on fixing issue #10 (better support for fenced code blocks)
+	* Merge pull request #9 from ratanasov/master
+
+2017-07-19  Radoslav Atanasov  <rsrado@gmail.com>
+
+	* Included <stdint.h> to make int32_t visible
+
+2017-07-18  Charles Childers  <crc@forthworks.com>
+
+	* a few more tests
+	* new example
+	* split legalese into separate LICENSE file
+	* add 48 new tests
+	* increase test coverage (all of ASCII:, some others)
+	* remove some unused code
+	* fix initial instance of unspec behaviour in bridge.c (see issue #8)
+
+2017-07-17  Charles Childers  <crc@forthworks.com>
+
+	* start bringing in tests from retro11
+	* begin work on an automated testing set
+	* document the file: namespace, fix stack comments in rre.forth.md
+	* some additional comments on shifts in Nga documentation
+	* more work on travis support
+	* begin work on travis ci support
+	* add sys: namespace, with argc/argv words (addresses issue #6)
+
+2017-07-16  Charles Childers  <crc@forthworks.com>
+
+	* correct f:to-number max value issue; fixes bug #5
+	* Merge pull request #4 from ratanasov/master
+
+2017-07-16  Radoslav Atanasov  <rsrado@gmail.com>
+
+	* `@` and `!` added to the prefix table in `RetroForth.md`
+	* `make clean` now deletes `bin/repl` too.
+
+2017-07-12  Charles Childers  <crc@forthworks.com>
+
+	* add n:MIN and n:MAX constant
+	* fix for issue #3 (bug in n:to-string)
+
 2017-07-11  Charles Childers  <crc@forthworks.com>
 
+	* fix documentation issue
+	* update changelog
 	* documentation for FPU
 	* include f: namespace by default
 	* initial checkin supporting FPU (port from WIP on iOS implementation)
